--- a/Code/UserApi/UserApi.csproj
+++ b/Code/UserApi/UserApi.csproj
@@ -30,4 +30,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
+    </ItemGroup>
+
 </Project>
