--- a/UserService/UserService.BLL/UserService.BLL.csproj
+++ b/UserService/UserService.BLL/UserService.BLL.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="15.0.1" />
+      <PackageReference Include="Serilog" Version="4.3.0" />
     </ItemGroup>
 
     <ItemGroup>
