--- a/UserService/UserService.BLL/UserService.BLL.csproj
+++ b/UserService/UserService.BLL/UserService.BLL.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Exceptions\User\" />
       <Folder Include="Models\Enums\" />
     </ItemGroup>
 
