--- a/UserService/UserService.API/UserService.API.csproj
+++ b/UserService/UserService.API/UserService.API.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.5.0" />
         <PackageReference Include="Auth0.AuthenticationApi" Version="7.40.0" />
         <PackageReference Include="AutoMapper" Version="15.0.1" />
+        <PackageReference Include="FluentValidation" Version="12.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
         <PackageReference Include="Serilog" Version="4.3.0" />
