--- a/TopicService/TopicService.Aplication/TopicService.Aplication.csproj
+++ b/TopicService/TopicService.Aplication/TopicService.Aplication.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+      <ProjectReference Include="..\MinIoService\MinIoService.csproj" />
       <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
