Implemented minio, added it to the services

--- a/UserService/UserService.BLL/UserService.BLL.csproj
+++ b/UserService/UserService.BLL/UserService.BLL.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\TopicService\MinIoService\MinIoService.csproj" />
       <ProjectReference Include="..\UserService.DAL\UserService.DAL.csproj" />
     </ItemGroup>
 
