Refactored MinioService logic. Now requires an inheritor that will define the bucket name

--- a/TopicService/Infrastructure/Infrastructure.csproj
+++ b/TopicService/Infrastructure/Infrastructure.csproj
@@ -25,6 +25,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Domain\Domain.csproj" />
+        <ProjectReference Include="..\MinIoService\MinIoService.csproj" />
         <Protobuf Include="gRpc\TopicService.proto" GrpcServices="Both" />
     </ItemGroup>
 
