--- a/UserService/UserService.BLL/UserService.BLL.csproj
+++ b/UserService/UserService.BLL/UserService.BLL.csproj
@@ -19,6 +19,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="PryanikMinio" Version="1.0.0" />
       <PackageReference Include="Serilog" Version="4.3.0" />
     </ItemGroup>
 
