Converted into ONION architecture

--- a/NotificationService/NotificationService.Infrastructure/NotificationService.Infrastructure.csproj
+++ b/NotificationService/NotificationService.Infrastructure/NotificationService.Infrastructure.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NotificationService.Domain\NotificationService.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
