--- a/NotificationService/NotificationService.Infrastructure/NotificationService.Infrastructure.csproj
+++ b/NotificationService/NotificationService.Infrastructure/NotificationService.Infrastructure.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\NotificationService.Domain\NotificationService.Domain.csproj" />
+      <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
 </Project>
