--- a/NotificationService/NotificationService.API/NotificationService.API.csproj
+++ b/NotificationService/NotificationService.API/NotificationService.API.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.2" />
+        <PackageReference Include="Messages" Version="1.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
     </ItemGroup>
 
