--- a/NotificationService/NotificationService.Domain/NotificationService.Domain.csproj
+++ b/NotificationService/NotificationService.Domain/NotificationService.Domain.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Messages" Version="1.4.2" />
       <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
     </ItemGroup>
 
