--- a/Messages/Messages.csproj
+++ b/Messages/Messages.csproj
@@ -3,11 +3,15 @@
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <PackageId>Messages</PackageId>
-        <Version>1.1.0</Version>
+        <Version>1.4.2</Version>
         <Authors>oldboni22</Authors>
         <Company>Huesos</Company>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
+    </ItemGroup>
 
 </Project>
