--- a/NotificationService/NotificationService.Domain/NotificationService.Domain.csproj
+++ b/NotificationService/NotificationService.Domain/NotificationService.Domain.csproj
@@ -8,8 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Messages" Version="1.4.2" />
+      <PackageReference Include="Messages" Version="1.4.3" />
       <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
 </Project>
