--- a/NotificationService/NotificationService.API/NotificationService.API.csproj
+++ b/NotificationService/NotificationService.API/NotificationService.API.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\NotificationService.Infrastructure\NotificationService.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
 </Project>
