--- a/NotificationService/NotificationService.API/NotificationService.API.csproj
+++ b/NotificationService/NotificationService.API/NotificationService.API.csproj
@@ -9,15 +9,15 @@
     <ItemGroup>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.2" />
         <PackageReference Include="Messages" Version="1.4.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\NotificationService.Infrastructure\NotificationService.Infrastructure.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
