--- a/.github/workflows/UserServiceTest.yml
+++ b/.github/workflows/UserServiceTest.yml
@@ -4,9 +4,9 @@ name: UserServiceTests
 
 on: 
   push: 
-    branches: main
+    branches: [main]
   pull_request:
-    branches: main
+    branches: [main]
 
 jobs:
   run_user_service_tests:
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
