--- a/.github/workflows/UserServiceTest.yml
+++ b/.github/workflows/UserServiceTest.yml
@@ -1,7 +1,5 @@
 name: UserServiceTests
 
-
-
 on: 
   push: 
     branches: [main]
@@ -12,6 +10,10 @@ jobs:
   run_user_service_tests:
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: read
+      packages: read
+      
     env:
       project_dir: ./UserService 
 
