--- a/.github/workflows/TopicServiceTest.yml
+++ b/.github/workflows/TopicServiceTest.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  run_user_service_tests:
+  run_topic_service_tests:
     runs-on: ubuntu-latest
     
     permissions:
