--- a/.github/workflows/Sonar.yml
+++ b/.github/workflows/Sonar.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
+    env:
+      PROJECT_PATH: ./UserService
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -39,7 +41,6 @@ jobs:
           dotnet tool update dotnet-sonarscanner --tool-path ${{ runner.temp }}\scanner
       - name: Build and analyze
         env:
-          PROJECT_PATH: ./UserService
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
