--- a/UserService/UserService.IntegrationTests/UserService.IntegrationTests.csproj
+++ b/UserService/UserService.IntegrationTests/UserService.IntegrationTests.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="Shouldly" Version="4.3.0" />
