Added Dockerfiles and docker compose

--- a/NotificationService/NotificationService.API/NotificationService.API.csproj
+++ b/NotificationService/NotificationService.API/NotificationService.API.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>980b563f-f22c-4bd0-bab3-60195b9bf044</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +20,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\NotificationService.Infrastructure\NotificationService.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
