--- a/NotificationService/NotificationService.API/Dockerfile
+++ b/NotificationService/NotificationService.API/Dockerfile
@@ -5,9 +5,8 @@ EXPOSE 5066
 
 FROM --platform=linux/amd64 mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-
 ARG GITHUB_TOKEN
+WORKDIR /src
 
 COPY ["NotificationService.API/NotificationService.API.csproj", "NotificationService.API/"]
 COPY ["NotificationService.Infrastructure/NotificationService.Infrastructure.csproj", "NotificationService.Infrastructure/"]
@@ -19,11 +18,11 @@ RUN dotnet restore "NotificationService.API/NotificationService.API.csproj"
 
 COPY . .
 WORKDIR "/src/NotificationService.API"
-RUN dotnet build "./NotificationService.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./NotificationService.API.csproj" -c ${BUILD_CONFIGURATION} -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./NotificationService.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./NotificationService.API.csproj" -c ${BUILD_CONFIGURATION} -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
