--- a/UserService/UserService.API/Dockerfile
+++ b/UserService/UserService.API/Dockerfile
@@ -6,9 +6,9 @@ EXPOSE 5100
 
 FROM --platform=linux/amd64 mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
+ARG GITHUB_TOKEN
 WORKDIR /src
 
-ARG GITHUB_TOKEN
 
 COPY ["UserService.API/UserService.API.csproj", "UserService.API/"]
 COPY ["UserService.BLL/UserService.BLL.csproj", "UserService.BLL/"]
@@ -20,11 +20,11 @@ RUN dotnet nuget add source https://nuget.pkg.github.com/oldboni22/index.json -u
 RUN dotnet restore "UserService.API/UserService.API.csproj"
 COPY . .
 WORKDIR "/src/UserService.API"
-RUN dotnet build "./UserService.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./UserService.API.csproj" -c ${BUILD_CONFIGURATION} -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./UserService.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./UserService.API.csproj" -c ${BUILD_CONFIGURATION} -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
