--- a/.github/workflows/NotificationServiceCI.yml
+++ b/.github/workflows/NotificationServiceCI.yml
@@ -80,6 +80,7 @@ jobs:
           /k:"oldboni22_Khata" `
           /o:"oldboni22" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
+          /d:sonar.exclusions="*.yml"
           /d:sonar.coverage.exclusions="**/Program.cs,**/Extensions/**/*.cs,**/Middleware/**/*.cs,**/Utilities/**/*.cs" 
           dotnet nuget add source https://nuget.pkg.github.com/oldboni22/index.json -u oldboni22 -p ${{ secrets.GITHUB_TOKEN }}
           dotnet build ./NotificationService
