--- a/.github/workflows/TopicServiceCI.yml
+++ b/.github/workflows/TopicServiceCI.yml
@@ -80,7 +80,7 @@ jobs:
           /o:"oldboni22" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           /d:sonar.exclusions="**/Migrations/**/*.cs,*.yml" `
-          /d:sonar.coverage.exclusions="**/Program.cs,**/Extensions/**/*.cs,**/Middleware/**/*.cs,**/Utilities/**/*.cs" 
+          /d:sonar.coverage.exclusions="**/Program.cs,**/Extensions/**/*,**/Middleware/**/*,**/Utilities/**/*,**/Dto/**/*" 
           dotnet nuget add source https://nuget.pkg.github.com/oldboni22/index.json -u oldboni22 -p ${{ secrets.GITHUB_TOKEN }}
           dotnet build ./TopicService
           ${{ runner.temp }}\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
